--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <a href="https://www.instagram.com/convitedojefferson" class="btn-elite" onclick="boom(event)">INSTAGRAM</a>
             <a href="https://wa.me/5521982576471" class="btn-elite" onclick="boom(event)">WHATSAPP</a>
             <a href="https://www.kwai.com/@jeffersonartes" class="btn-elite" onclick="boom(event)">KWAI</a>
-            <a href="convitedojefferson.github.io/convitedojefferson" class="btn-elite" onclick="boom(event)">LOJA VIRTUAL</a>
+            <a href="https://convitedojefferson.github.io/convitedojefferson/" class="btn-elite" onclick="boom(event)">LOJA VIRTUAL</a>
         </nav>
     </div>
 
