--- a/index.html
+++ b/index.html
@@ -179,11 +179,10 @@
 
     <div class="main-card">
         <div class="avatar-aura">
-            <img src="https://i.pinimg.com/1200x/a4/76/4c/a4764cf094ec56b1d6dcec626b74ec62.jpg" alt="CONVITE DO">
+            <img src="https://i.imgur.com/Q8qggPX.png" alt="CONVITE DO">
         </div>
-        
-        
-        <h1><div class="tag">Jefferson</div></h1>
+
+        <h1><div class="tag">Convite do Jefferson</div></h1>
 
         <nav class="btn-list">
             <a href="https://www.instagram.com/convitedojefferson" class="btn-elite" onclick="boom(event)">INSTAGRAM</a>
